--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.544.0",
     "monaco-editor": "^0.55.1",
     "motion": "^12.23.25",
+    "next-themes": "^0.4.6",
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -59,6 +60,7 @@
     "recharts": "^2.15.4",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
