--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto-js": "^4.2.0",
     "dagre": "^0.8.5",
     "lucide-react": "^0.544.0",
     "monaco-editor": "^0.55.1",
@@ -66,13 +67,15 @@
     "tw-animate-css": "^1.3.6",
     "use-debounce": "^10.0.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/dagre": "^0.7.53",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
