--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.8",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
@@ -57,6 +58,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "react-share": "^5.2.2",
+    "react-syntax-highlighter": "^16.1.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "rehype-highlight": "^7.0.2",
@@ -80,6 +82,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
