--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tw-animate-css": "^1.4.0",
     "use-debounce": "^10.0.6",
     "vite-tsconfig-paths": "^5.1.4",
+    "zangodb": "^1.0.8",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
